# bside

./: .gitignore  LICENSE  README.md  dataset.py  dmd.py  dynamics.py  mkdocs.yml~  pyproject.toml  requirements.txt  subspace_encoder.py
.github/workflows/: python-publish.yaml
bside/: __init__.py  dataset.py  dmd.py  dynamics.py  filtering.py  models.py  ssm.py  state_space.py  subspace_encoder.py
bside/filtering/: __init__.py  distributions.py  filters.py  functional  functional.py  plotting.py
docs/: about.md  index.md  mkdocs.yml
examples/: linear_filtering.ipynb  linear_filtering.py  linear_oscillator.py  linear_pendulum.ipynb  nonlinear_filtering.ipynb  nonlinear_filtering.py
